--- a/Task1LoginRegister/Views/Home/Index.cshtml
+++ b/Task1LoginRegister/Views/Home/Index.cshtml
@@ -4,97 +4,72 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="text-center mt-4">User List</h1>
 
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Photo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Gender)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th>
-            <th>
-                Status
-            </th>
-
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                    <img src="~/Images/@item.Photo" height="50" width="50" asp-append-version="true" alt="Alternate Text" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Gender)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Password)
-            </td>
-                <td>
-                    <button class="btn @(item.IsActive ? "btn-danger" : "btn-success")" data-id="@item.Id">
-                       @(item.IsActive ? "Deactivate" : "Activate")
-                    </button>
-
-                </td>
-
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-               
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).on("click", ".btn", function () {
-            var button = $(this);
-            var userId = button.data("id");
-
-            $.ajax({
-                type: "POST",
-                url: "@Url.Action("ToggleStatus", "Home")",
-                data: { id: userId },
-                success: function (data) {
-                    if (data.isActive) {
-                        button.removeClass("btn-success").addClass("btn-danger").text("Deactivate");
-                    } else {
-                        button.removeClass("btn-danger").addClass("btn-success").text("Activate");
-                    }
+<div class="container">
+    <div class="table-responsive">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.FirstName)</th>
+                    <th>@Html.DisplayNameFor(model => model.LastName)</th>
+                    <th>@Html.DisplayNameFor(model => model.Email)</th>
+                    <th>@Html.DisplayNameFor(model => model.Phone)</th>
+                    <th>@Html.DisplayNameFor(model => model.Photo)</th>
+                    <th>@Html.DisplayNameFor(model => model.Gender)</th>
+                    <th>@Html.DisplayNameFor(model => model.Password)</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.LastName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Phone)</td>
+                        <td>
+                            <img src="~/Images/@item.Photo" height="50" width="50" alt="Photo" />
+                        </td>
+                        <td>@Html.DisplayFor(modelItem => item.Gender)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Password)</td>
+                        <td>
+                            <button class="btn @(item.IsActive ? "btn-danger" : "btn-success") btn-sm" data-id="@item.Id">
+                                @(item.IsActive ? "Deactivate" : "Activate")
+                            </button>
+                        </td>
+                        <td>
+                            <div class="d-flex flex-column flex-sm-row gap-2">
+                                <a class="btn btn-warning btn-sm w-100" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                <a class="btn btn-danger btn-sm w-100" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            </div>
+                        </td>
+                    </tr>
                 }
-            });
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).on("click", ".btn", function () {
+        var button = $(this);
+        var userId = button.data("id");
+
+        $.ajax({
+            type: "POST",
+            url: "@Url.Action("ToggleStatus", "Home")",
+            data: { id: userId },
+            success: function (data) {
+                if (data.isActive) {
+                    button.removeClass("btn-success").addClass("btn-danger").text("Deactivate");
+                } else {
+                    button.removeClass("btn-danger").addClass("btn-success").text("Activate");
+                }
+            }
         });
-    </script>
+    });
+</script>
