--- a/Task1LoginRegister/Views/Login/SignUp.cshtml
+++ b/Task1LoginRegister/Views/Login/SignUp.cshtml
@@ -35,13 +35,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Profile" class="control-label"></label>
-                <input asp-for="Profile" class="form-control" />
+                <input asp-for="Profile" class="form-control" required />
                 <span asp-validation-for="Profile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <div>
-                    <input type="radio" asp-for="Gender" value="Male" id="male" />
+                    <input type="radio" asp-for="Gender" value="Male" id="masssle" />
                     <label for="male">Male</label>
                     <input type="radio" asp-for="Gender" value="Female" id="female" />
                     <label for="female">Female</label>
