--- a/Task1LoginRegister/Views/Login/SignUp.cshtml
+++ b/Task1LoginRegister/Views/Login/SignUp.cshtml
@@ -14,7 +14,7 @@
                     <h3 class="card-title mb-0">SignUp</h3>
                 </div>
                 <div class="card-body py-4">
-                    <form asp-action="SignUp" method="0post" enctype="multipart/form-data">
+                    <form asp-action="SignUp" method="post" enctype="multipart/form-data">
                         <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
                         <div class="form-group mb-3">
