--- a/Task1LoginRegister/Views/Products/Details.cshtml
+++ b/Task1LoginRegister/Views/Products/Details.cshtml
@@ -25,6 +25,7 @@
     .product-image {
         width: 100%;
         border-radius: 10px;
+        min-height:100%;
         object-fit: cover;
     }
 
