--- a/Task1LoginRegister/Views/Products/Index.cshtml
+++ b/Task1LoginRegister/Views/Products/Index.cshtml
@@ -25,7 +25,7 @@
                 <th>@Html.DisplayNameFor(model => model.Name)</th>
                 <th>@Html.DisplayNameFor(model => model.SKU)</th>
                 <th>@Html.DisplayNameFor(model => model.Price)</th>
-                <th>@Html.DisplayNameFor(model => model.SellingPricePercent)</th>
+                <th width="6%">@Html.DisplayNameFor(model => model.SellingPricePercent)</th>
                 <th>@Html.DisplayNameFor(model => model.CalculatedSellingPrice)</th>
                 <th>@Html.DisplayNameFor(model => model.Status)</th>
                 <th>@Html.DisplayNameFor(model => model.Category)</th>
@@ -54,7 +54,7 @@
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.SKU)</td>
                     <td>@item.Price.ToString("C")</td>
-                    <td>@item.SellingPricePercent.ToString("0.##") %</td>
+                    <td width="6%">@item.SellingPricePercent.ToString("0.##") %</td>
                     <td>@item.CalculatedSellingPrice.ToString("C")</td>
                     <td>@(item.Status ? "Active" : "Inactive")</td>
 
