--- a/Task1LoginRegister/Views/Login/SignUp.cshtml
+++ b/Task1LoginRegister/Views/Login/SignUp.cshtml
@@ -10,7 +10,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-7 col-sm-10">
             <div class="card shadow-lg border-0 rounded-lg">
-                <div class="card-header text-center bg-primary text-white py-4">
+                <div class="card-header text-center text-white py-4" style="background: linear-gradient(90deg, #007bff, #00c6ff);">
                     <h3 class="card-title mb-0">SignUp</h3>
                 </div>
                 <div class="card-body py-4">
