--- a/Task1LoginRegister/Views/Products/Create.cshtml
+++ b/Task1LoginRegister/Views/Products/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Add Product</h2>
+    <h2 class="text-primary mb-4">Add Product</h2>
 
     <form asp-action="Create" enctype="multipart/form-data" method="post" class="shadow-lg p-4 bg-light rounded">
 
