--- a/Task1LoginRegister/wwwroot/css/LoginSignup.css
+++ b/Task1LoginRegister/wwwroot/css/LoginSignup.css
@@ -51,8 +51,8 @@ body {
 
 /* Button Styling */
 .btn-primary {
-    background-color: #007bff;
-    border: none;
+   background: linear-gradient(90deg, #007bff, #00c6ff);
+       border: none;
     font-size: 1.2rem;
 }
 
