Corrected Icons Problem

--- a/Task1LoginRegister/Views/CategorySubcategory/Delete.cshtml
+++ b/Task1LoginRegister/Views/CategorySubcategory/Delete.cshtml
@@ -64,7 +64,7 @@
 
     <!-- Back to List Button -->
     <div class="text-center mt-4">
-        <a asp-action="Index" class="btn btn-outline-secondary px-5 py-2">
+        <a asp-action="Index" class="btn btn-secondary px-5 py-2">
             <i class="fas fa-arrow-left"></i> Back to List
         </a>
     </div>
