--- a/Task1LoginRegister/Views/CategorySubcategory/Edit.cshtml
+++ b/Task1LoginRegister/Views/CategorySubcategory/Edit.cshtml
@@ -55,8 +55,8 @@
 
         <!-- Submit Button -->
         <div class="text-center mt-4">
-            <button type="submit" class="btn btn-lg btn-primary px-4 shadow">Save Changes</button>
-            <a asp-action="Index" class="btn btn-lg btn-secondary px-4 shadow">Cancel</a>
+            <button type="submit" class="btn btn-lg btn-primary px-4 shadow"><i class="fas fa-save"></i> Save Changes</button>
+            <a asp-action="Index" class="btn btn-lg btn-secondary px-4 shadow"><i class="fas fa-cancel"></i> Cancel</a>
         </div>
     </form>
 </div>
