--- a/Task1LoginRegister/Views/Products/Index.cshtml
+++ b/Task1LoginRegister/Views/Products/Index.cshtml
@@ -9,10 +9,10 @@
 
 <div class="alert alert-dark text-center">
     <h5 class="mb-3">Want to manage Categories?</h5>
-    <a asp-action="Index" asp-controller="CategorySubcategory" class="btn btn-dark text-white btn-md">Go to Category and Subcategory Dashboard</a>
+    <a asp-action="Index" asp-controller="CategorySubcategory" class="btn btn-dark text-white btn-md"><i class="fas fa-box-open"></i> Go to Category and Subcategory Dashboard</a>
 </div>
 <p class="text-right mt-2">
-    <a asp-action="Create" class="btn btn-primary btn-md">Create New Product</a>
+    <a asp-action="Create" class="btn btn-primary btn-md"><i class="fas fa-plus-circle"></i> Create New Product</a>
 </p>
 
 <div class="table-responsive">
