--- a/Task1LoginRegister/wwwroot/css/LoginSignup.css
+++ b/Task1LoginRegister/wwwroot/css/LoginSignup.css
@@ -3,7 +3,10 @@ body {
     background-color: #f8f9fa;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
+.navbar-toggler {
+    color: white;
+    border-color: white;
+}
 /* Container */
 .container {
     max-width: 100%;
