--- a/Task1LoginRegister/Views/CategorySubcategory/Create.cshtml
+++ b/Task1LoginRegister/Views/CategorySubcategory/Create.cshtml
@@ -38,7 +38,8 @@
 
    
         <div class="form-group text-center">
-            <button type="submit" class="btn btn-primary px-5 py-2">Save</button>
+            <button type="submit" class="btn btn-primary px-5 py-2">
+                <i class="fas fa-save"></i> Save</button>
         </div>
 
         <div class="form-group text-center mt-4">
