--- a/Task1LoginRegister/Views/Products/Create.cshtml
+++ b/Task1LoginRegister/Views/Products/Create.cshtml
@@ -89,8 +89,8 @@
         </div>
 
         <div class="d-flex justify-content-between">
-            <a href="javascript:history.back()" class="btn btn-secondary px-4 py-2">Back</a>
-            <button type="submit" class="btn btn-primary px-4 py-2">Save</button>
+            <a href="javascript:history.back()" class="btn btn-secondary px-4 py-2"><i class="fas fa-arrow-left"></i> Back</a>
+            <button type="submit" class="btn btn-primary px-4 py-2"><i class="fas fa-save"></i> Save</button>
         </div>
     </form>
 </div>
