--- a/Task1LoginRegister/Views/Products/Details.cshtml
+++ b/Task1LoginRegister/Views/Products/Details.cshtml
@@ -195,7 +195,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a asp-action="Edit" asp-route-id="@Model.ProductId" class="btn btn-primary mx-2">Edit Product</a>
-        <a asp-action="Index" class="btn btn-secondary mx-2">Back to List</a>
+        <a asp-action="Edit" asp-route-id="@Model.ProductId" class="btn btn-primary mx-2"><i class="fas fa-edit"></i> Edit Product</a>
+        <a asp-action="Index" class="btn btn-secondary mx-2"><i class="fas fa-arrow-left"></i> Back to List</a>
     </div>
 </div>
