--- a/Task1LoginRegister/Views/Products/Edit.cshtml
+++ b/Task1LoginRegister/Views/Products/Edit.cshtml
@@ -19,7 +19,7 @@
 <div class="container my-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="text-primary">Edit Product</h1>
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Back to List</a>
     </div>
 
     <form asp-action="Edit" enctype="multipart/form-data" method="post">
@@ -159,7 +159,7 @@
         </div>
 
         <div class="form-group mt-4">
-            <button type="submit" class="btn btn-primary btn-lg">Save Changes</button>
+            <button type="submit" class="btn btn-primary btn-lg"><i class="fas fa-save"></i> Save Changes</button>
         </div>
     </form>
 </div>
